# qw-cat

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build_and_upload.yml  lints.yml
src/: App.module.scss  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/bundle/: io.github.neisvestney.qw-cat.metainfo.xml  io.github.neisvestney.qw-cat.yml.hbs  render-templates.js  template.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  ffmpeg_download.rs  ffmpeg_export_command.rs  ffmpeg_path.rs  ffmpeg_time_duration.rs  ffprobe.rs  handle_cli_args.rs  handle_main_window_event.rs  integrated_server.rs  lib.rs  logs_store.rs  main.rs  open_devtools_command.rs  select_new_video_file_command.rs  temp_cleanup.rs
src/components/: FfmpegTasksQueueView.tsx  LogsView.tsx  SelectFile.tsx  StartPage.tsx  VersionChecker.tsx  VideoView.tsx
src/components/ui/: CircularProgressWithLabel.tsx
src/lib/: addPostfixToFilename.ts  convertFilePath.ts  createAsyncEventsDisposer.ts  estimateVideoSize.ts  replaceExtension.ts  stringifyCircular.ts  useSyncedMediaTracks.ts  useVideoGain.ts
src/stores/: AppStateStore.ts  FfmpegTasksQueue.ts  LogsStore.ts  VideoEditorStore.ts
