[package]
name = "qw-cat"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qw_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = { version = "0.3.4", features = ["build-time-generation"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = "1.48.0"
ffmpeg-sidecar = "2.3.0"
ts-rs = "11.1.0"
base64 = "0.22.1"
futures = "0.3.31"
tauri-plugin-prevent-default = "4.0.3"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4.29"

