[package]
name = "qw-cat"
version = "0.2.0"
description = "View and trim video"
authors = ["Neisvestney"]
repository = "https://github.com/Neisvestney/qw-cat"
homepage = "https://github.com/Neisvestney/qw-cat#readme"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "qw_cat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-typegen = { version = "0.3.4", features = ["build-time-generation"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tokio = { version = "1.48.0", features = ["time"] }
ffmpeg-sidecar = "2.3.0"
ts-rs = "11.1.0"
base64 = "0.22.1"
futures = "0.3.31"
tauri-plugin-prevent-default = "4.0.3"
tauri-plugin-log = { version = "2", features = ["colored"] }
log = "0.4.29"
anyhow = "1.0.100"
ureq = "3.1.4"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
tower = "0.5.2"
fern = "0.7.1"
ringbuf = "0.4.8"
serde_repr = "0.1.20"

